--- a/ТипуПроєкт1/doorsmonsters.html
+++ b/ТипуПроєкт1/doorsmonsters.html
@@ -6,13 +6,13 @@
 </head>
 <style>
     body {
-        background-color: rgb(116, 96, 94);
+        background-color: rgb(131, 114, 92);
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 
     .welcome {
-        color: burlywood;
-        background-color: rgb(129, 124, 115);
+        color: rgb(177, 148, 102);
+        background-color: rgb(153, 121, 92);
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
@@ -20,7 +20,27 @@
         background-color: rgb(134, 128, 119);
         color: rgb(73, 40, 40);
     }
-
+    .a:hover{
+        animation: myscale 3s;
+        animation-delay: 0s;
+    }
+    .b:hover{
+        animation: myscale 3s;
+        animation-delay: 0s;
+    }
+    .c:hover{
+        animation: myscale 3s;
+        animation-delay: 0s;
+    }
+    .d:hover{
+        animation: myscale 3s;
+        animation-delay: 0s;
+    }
+@keyframes myscale {
+    0% {transform: scale(1, 1);}
+    1% {transform: scale(1, 1.1); background: rgb(156, 137, 115); color: black};
+    2% {transform: scale(1, 1.2); background: rgb(185, 154, 107);}
+}
 </style>
 
 <body>
@@ -28,7 +48,7 @@
         <h1>Вітаємо вас на цьому сайті!</h1>
         <h2>-Тут ви зможете розпізнати частинку про монстрів, які з'являються у грі Doors.</h2>
     </div>
-    <div class="content-div">
+    <div class="content-div a">
         <h3>Що таке Doors?</h3>
         <p>Doors (двері з анг. мові) - це гра в стилі страшилки у програмі Roblox, у якій ваша ціль
             це<br> перейти через 100 дверей. Здавалося ся б, що тут важкого? Але це не<br>
@@ -36,26 +56,26 @@
             й складніше. Й збільшується ризик бути атакованим від різних монстрів.</p>
     </div>
 
-    <div class="content-div">
+    <div class="content-div b">
         <h3>Як працюють монстри в Doors?</h3>
         <p>Монстри є у всіх страшилках, так само як і в Doors. В грі є вилика кількість<br>
             монстрів, які можуть вас вбити, або просто налякати. В кожного монста є своя слабка точка, з якою<br>
             ви можете подолати їх. Ми розділили цих створінь на три частини - безпечні, небезпечні та смертельні.</p>
     </div>
 
-    <div class="content-div">
+    <div class="content-div c">
         <h3>Які є види створінь в Doors?</h3>
         <p>Ми розділили монстрів в Doors на три групи. Перша - безпечні. Вони не завдають<br>
             жодної шкоди гравцеві, лише можуть налякати. Друга група - це небезпечні. Вони завжди завдають шкоду<br>
             гравцеві, але не вбивають їх з першої атаки. Віднімають певну кількість здоров'я. І остання група -<br>
-            смертельні. Завжди з першої атаки вбивають гравця. Тому від сних слід рятуватися без жартів.</p>
-        <p><a href="file:///C:/WebSkill/students/%D0%A0%D0%BE%D0%B1%D0%BE%D1%82%D0%B8%20%D0%94%D0%B0%D0%BD%D0%B8%D0%BB%D0%B0%20%D0%9A%D0%B0%D0%BD%D1%87%D1%83%D0%B3%D0%B8/%D0%A2%D0%B8%D0%BF%D1%83%D0%9F%D1%80%D0%BE%D1%94%D0%BA%D1%821/%D0%91%D0%B5%D0%B7%D0%BF%D0%B5%D1%87%D0%BD%D1%96.html">- безпечні</a><br>
-            <a href="file:///C:/WebSkill/students/%D0%A0%D0%BE%D0%B1%D0%BE%D1%82%D0%B8%20%D0%94%D0%B0%D0%BD%D0%B8%D0%BB%D0%B0%20%D0%9A%D0%B0%D0%BD%D1%87%D1%83%D0%B3%D0%B8/%D0%A2%D0%B8%D0%BF%D1%83%D0%9F%D1%80%D0%BE%D1%94%D0%BA%D1%821/%D0%9D%D0%B5%D0%B1%D0%B5%D0%B7%D0%BF%D0%B5%D1%87%D0%BD%D1%96.html">- небезпечні</a><br>
-            <a href="file:///C:/WebSkill/students/%D0%A0%D0%BE%D0%B1%D0%BE%D1%82%D0%B8%20%D0%94%D0%B0%D0%BD%D0%B8%D0%BB%D0%B0%20%D0%9A%D0%B0%D0%BD%D1%87%D1%83%D0%B3%D0%B8/%D0%A2%D0%B8%D0%BF%D1%83%D0%9F%D1%80%D0%BE%D1%94%D0%BA%D1%821/%D0%A1%D0%BC%D0%B5%D1%80%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D1%96.html">- смертельні</a>
+            смертельні. Завжди з першої атаки вбивають гравця. Тому від них слід рятуватися без жартів.</p>
+        <p><a href="file:///c%3A/Webskill/Students/%D0%94%D0%B0%D0%BD%D0%B8%D0%BB%D0%B0%20%D0%9A%D0%B0%D0%BD%D1%87%D1%83%D0%B3%D0%B8/FakeDoors/%D0%A2%D0%B8%D0%BF%D1%83%D0%9F%D1%80%D0%BE%D1%94%D0%BA%D1%821/%D0%91%D0%B5%D0%B7%D0%BF%D0%B5%D1%87%D0%BD%D1%96.html">- безпечні</a><br>
+            <a href="file:///c%3A/Webskill/Students/%D0%94%D0%B0%D0%BD%D0%B8%D0%BB%D0%B0%20%D0%9A%D0%B0%D0%BD%D1%87%D1%83%D0%B3%D0%B8/FakeDoors/%D0%A2%D0%B8%D0%BF%D1%83%D0%9F%D1%80%D0%BE%D1%94%D0%BA%D1%821/%D0%9D%D0%B5%D0%B1%D0%B5%D0%B7%D0%BF%D0%B5%D1%87%D0%BD%D1%96.html">- небезпечні</a><br>
+            <a href="file:///c%3A/Webskill/Students/%D0%94%D0%B0%D0%BD%D0%B8%D0%BB%D0%B0%20%D0%9A%D0%B0%D0%BD%D1%87%D1%83%D0%B3%D0%B8/FakeDoors/%D0%A2%D0%B8%D0%BF%D1%83%D0%9F%D1%80%D0%BE%D1%94%D0%BA%D1%821/%D0%A1%D0%BC%D0%B5%D1%80%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D1%96.html">- смертельні</a>
         </p>
     </div>
 
-    <div class="content-div">
+    <div class="content-div d">
         Це є українська мала версія сайту про Doors на англійській мові. Клацніть <a href="https://doors-game.fandom.com/wiki/DOORS_Wiki">сюди</a> щоб <br>
         переглянути оригінал.
     </div>
