--- a/ТипуПроєкт1/Безпечні.html
+++ b/ТипуПроєкт1/Безпечні.html
@@ -35,6 +35,23 @@
     .img-with-text {
         display: inline-block;
     }
+    .content-div {
+        background-color: rgb(134, 128, 119);
+        color: rgb(73, 40, 40);
+    }
+    .a:hover{
+        animation: myscale 3s;
+        animation-delay: 0s;
+    }
+    .b:hover{
+        animation: myscale 3s;
+        animation-delay: 0s;
+    }
+@keyframes myscale {
+    0% {transform: scale(1, 1);}
+    1% {transform: scale(1, 1.1); background: rgb(156, 137, 115); color: black};
+    2% {transform: scale(1, 1.2); background: rgb(185, 154, 107);}
+}
 </style>
 
 <body>
@@ -43,7 +60,7 @@
         <h2>- Тут ви дізнаєтеся про: безпечних монстрів в Doors</h2>
     </div>
     <div class="content-div content-div-left">
-        <div class="content-div-elem window">
+        <div class="content-div-elem a window">
             <h3>Window</h3>
             <h3>Інформація</h3>
             <p>Window (вікно по анг. мові або Віндов) - безпечний монстр в грі Doors, який<br>
@@ -68,7 +85,7 @@
                 Віндов видно у лобі.
             </p>
         </div>
-        <div class="content-div-elem shadow">
+        <div class="content-div-elem b shadow">
             <h3>Shadow</h3>
             <h3>Інформація</h3>
             <p>Shadow (тінь з анг. мови) - ще один безпечний монстр, який може насправді<br>
@@ -111,14 +128,8 @@
         <p>- Скелет</p>
         <p>- Синє сяйво (допомагає вам)</p>
     </div>
-    <div class="content-div content-div-right">
-        <p>Хочеться більше<br>
-        інформації про Віндов?<br>
-    нажимайте <a href="https://doors-game.fandom.com/wiki/Window">сюди.</a></p>
-    </div>
-    <div class="content-div content-div-right2">
-        <p>Більше іформації <br>
-        про Шадоу? <a href="https://doors-game.fandom.com/wiki/Shadow">Сюди.</a></p>
+    <div>
+        <a href="file:///c%3A/Webskill/Students/%D0%94%D0%B0%D0%BD%D0%B8%D0%BB%D0%B0%20%D0%9A%D0%B0%D0%BD%D1%87%D1%83%D0%B3%D0%B8/FakeDoors/%D0%A2%D0%B8%D0%BF%D1%83%D0%9F%D1%80%D0%BE%D1%94%D0%BA%D1%821/doorsmonsters.html">--повернутись назад--</a>
     </div>
 </body>
 
