--- a/ТипуПроєкт1/Небезпечні.html
+++ b/ТипуПроєкт1/Небезпечні.html
@@ -35,6 +35,19 @@
     .img-with-text {
         display: inline-block;
     }
+    .a:hover{
+        animation: myscale 3s;
+        animation-delay: 0s;
+    }
+    .b:hover{
+        animation: myscale 3s;
+        animation-delay: 0s;
+    }
+@keyframes myscale {
+    0% {transform: scale(1, 1);}
+    1% {transform: scale(1, 1.1); background: rgb(156, 137, 115); color: black};
+    2% {transform: scale(1, 1.2); background: rgb(185, 154, 107);}
+}
 </style>
 
 <body>
@@ -43,7 +56,7 @@
         <h2>- Тут ви дізнаєтеся про: небезпечних монстрів в Doors</h2>
     </div>
     <div class="content-div">
-        <div class="content-div-elem screech">
+        <div class="content-div-elem a screech">
             <h3>Screech</h3>
             <h3>Інформація</h3>
             <p>Screech - (вереск по анг. мові або Скрітч) - Це досить небезпечний монстр в грі, який <br>
@@ -129,7 +142,7 @@
             </p>
 
         </div>
-        <div class="content-div-elem dupe">
+        <div class="content-div-elem b dupe">
             <h3>Dupe</h3>
             <h3>Інформація</h3>
             <p>Dupe (обдурити з анг. мови або Дюп) - ще один небезпечний монстр в Doors, <br>
@@ -203,6 +216,9 @@
             <p>- Воід</p>
             <p>- Снейр</p>
         </h3>
+    </div>
+    <div>
+        <a href="file:///c%3A/Webskill/Students/%D0%94%D0%B0%D0%BD%D0%B8%D0%BB%D0%B0%20%D0%9A%D0%B0%D0%BD%D1%87%D1%83%D0%B3%D0%B8/FakeDoors/%D0%A2%D0%B8%D0%BF%D1%83%D0%9F%D1%80%D0%BE%D1%94%D0%BA%D1%821/doorsmonsters.html">--повернутись назад--</a>
     </div>
 </body>
 
